[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "atopile"
description = "A toolchain bringing the best of software development to the real-world!"
readme = "README.md"
requires-python = ">=3.11"
license = ""
authors = [
    { name = "Matthew Wildoer", email = "mawildoer@gmail.com" },
    { name = "Timothee Peter", email = "timothee.peter@mac.com" },
    { name = "Narayan Powderly", email = "napowderly@gmail.com" },
]

dependencies = [
    "xlm-roberta-large==4.13.0",
    "09panesara/distilbert-base-uncased-finetuned-cola",
    "xlnet-base-cased",
    "xlnet-large-cased",
    "007J/smile==1.235.dd",
    "0307061430/xuangou",
    "0x7194633/keyt5-base",
    "0x7194633/keyt5-large",
    "0xDEADBEA7/DialoGPT-small-rick",
    "123123/ghfk"
]
dynamic = ["version"]
