[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "atopile"
description = "A toolchain bringing the best of software development to the real-world!"
readme = "README.md"
requires-python = ">=3.11"
license = ""
authors = [
    { name = "Matthew Wildoer", email = "mawildoer@gmail.com" },
    { name = "Timothee Peter", email = "timothee.peter@mac.com" },
    { name = "Narayan Powderly", email = "napowderly@gmail.com" },
]

dependencies = [
    "xlm-roberta-large==4.13.0",
    "09panesara/distilbert-base-uncased-finetuned-cola",
    "AvatarXD/DialoGPT-medium-Blitzo",
    "Augustvember/wokkabottest2",
    "Aviora/news2vec",
    "Aurora/community.afpglobal",
    "Augustvember/wokka4",
    "Augustvember/wokka2",
    "Augustvember/wokka",
    "123123/ghfk"
]
dynamic = ["version"]
