[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "atopile"
description = "A toolchain bringing the best of software development to the real-world!"
readme = "README.md"
requires-python = ">=3.11"
license = ""
authors = [
    { name = "Matthew Wildoer", email = "mawildoer@gmail.com" },
    { name = "Timothee Peter", email = "timothee.peter@mac.com" },
    { name = "Narayan Powderly", email = "napowderly@gmail.com" },
]

dependencies = [
    "xlm-roberta-large==4.13.0",
    "jonatasgrosman/wav2vec2-large-xlsr-53-english",
    "openai/clip-vit-large-patch14",
    "microsoft/resnet-50",
    "stabilityai/stable-diffusion-xl-base-1.0",
    "stabilityai/stable-diffusion-xl-refiner-1.0",
    "cl-tohoku/bert-base-japanese",
    "openai/clip-vit-base-patch32",
    "dslim/bert-base-NER",
    "neuralmind/bert-base-portuguese-cased"
]
dynamic = ["version"]
